--- a/app/src/main/res/layout/fragment_bookcity.xml
+++ b/app/src/main/res/layout/fragment_bookcity.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.book.ireader.widget.ScrollRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bookcity_swipe_refresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:text_error_tip="加载错误,请稍后再试">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -11,54 +12,19 @@
 
         <include
             android:id="@+id/bookcity_banner"
-            layout="@layout/include_banner" />
+            layout="@layout/include_banner"
+            android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/bookcity_tv_hot_books"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="热门小说"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/bookcity_recyclerview"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/bookcity_banner" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/bookcity_rv_hot_books"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookcity_tv_hot_books" />
-
-        <TextView
-            android:id="@+id/bookcity_tv_new_books"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="新书抢鲜"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookcity_rv_hot_books" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/bookcity_rv_new_books"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookcity_tv_new_books" />
-
-        <TextView
-            android:id="@+id/bookcity_tv_finished_books"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="畅销完本"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookcity_rv_new_books" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/bookcity_rv_finished_books"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/bookcity_tv_finished_books" />
     </android.support.constraint.ConstraintLayout>
-</com.book.ireader.widget.ScrollRefreshLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
