--- a/app/src/main/res/layout/include_banner.xml
+++ b/app/src/main/res/layout/include_banner.xml
@@ -4,6 +4,8 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:gravity="center"
+    android:scaleType="fitXY"
+    android:src="@mipmap/banner_0"
     app:layout_constraintDimensionRatio="H,16:6"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent" />
