--- a/ireader/src/main/res/layout/activity_read.xml
+++ b/ireader/src/main/res/layout/activity_read.xml
@@ -13,7 +13,7 @@
         android:background="@drawable/theme_leather_bg">
 
         <!--阅读页面-->
-        <com.example.newbiechen.ireader.widget.page.PageView
+        <com.book.ireader.widget.page.PageView
             android:id="@+id/read_pv_page"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
