--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -4,11 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/bookdetail_toolbar"
+        layout="@layout/toolbar" />
+
     <ImageView
         android:id="@+id/bookdetail_iv_cover"
         android:layout_width="@dimen/book_cover_width"
         android:layout_height="@dimen/book_cover_height"
-        android:src="@mipmap/ic_default_portrait" />
+        android:src="@mipmap/ic_default_portrait"
+        app:layout_constraintTop_toBottomOf="@id/bookdetail_toolbar" />
 
     <TextView
         android:id="@+id/bookdetail_tv_title"
@@ -16,7 +21,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:text="title"
-        app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover" />
+        app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
+        app:layout_constraintTop_toBottomOf="@id/bookdetail_toolbar" />
 
     <LinearLayout
         android:id="@+id/bookdetail_ll_author"
