--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,8 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <include android:id="@+id/main_toolbar" layout="@layout/toolbar" />
+
     <FrameLayout
         android:id="@+id/main_fl_content"
         android:layout_width="0dp"
@@ -14,7 +16,7 @@
         app:layout_constraintBottom_toTopOf="@id/navigation"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/main_toolbar" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
