--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,6 @@
         android:id="@+id/action_search"
         android:orderInCategory="80"
         android:title="@string/nb.menu.action.search"
-        android:icon="@mipmap/ic_menu_search"
+        android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom"/>
 </menu>
