--- a/ireader/src/main/res/values/styles.xml
+++ b/ireader/src/main/res/values/styles.xml
@@ -136,6 +136,10 @@
         <item name="android:scaleType">centerCrop</item>
     </style>
 
+    <style name="Loading.ProgressBar" parent="Base.Widget.AppCompat.ProgressBar">
+        <item name="android:indeterminateTint">@color/colorPrimary</item>
+        <item name="android:indeterminateTintMode">src_atop</item>
+    </style>
     <!-- TextAppearance:修改 -->
     <style name="NB.Theme.TextAppearance" />
 </resources>
