--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -1,157 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/bookdetail_toolbar"
         layout="@layout/toolbar" />
 
-    <ImageView
-        android:id="@+id/bookdetail_iv_cover"
-        android:layout_width="@dimen/book_cover_width"
-        android:layout_height="@dimen/book_cover_height"
-        android:src="@mipmap/ic_default_portrait"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_toolbar" />
-
-    <TextView
-        android:id="@+id/bookdetail_tv_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:text="title"
-        app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_toolbar" />
-
-    <LinearLayout
-        android:id="@+id/bookdetail_ll_author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:orientation="horizontal"
-        app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_tv_title">
-
-        <TextView
-            android:id="@+id/bookdetail_tv_author"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="author" />
-
-        <View
-            android:layout_width="@dimen/common_divider_vertical_width"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:background="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/bookdetail_tv_category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:text="category" />
-
-        <View
-            android:layout_width="@dimen/common_divider_vertical_width"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:background="@color/colorPrimary" />
-
-        <TextView
-            android:id="@+id/bookdetail_tv_wordcount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:text="wordcount" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/bookdetail_tv_lasttime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="lasttime"
-        app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_author" />
-
-    <LinearLayout
-        android:id="@+id/bookdetail_ll_add_bookshelf"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/bookdetail_swipe_refresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_iv_cover">
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/bookdetail_bt_add_bookshelf"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/add_bookshelf" />
-
-        <Button
-            android:id="@+id/bookdetail_bt_start_read"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_weight="1"
-            android:text="@string/start_read" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/bookdetail_tv_longintro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="longIntro"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_add_bookshelf" />
-
-    <LinearLayout
-        android:id="@+id/bookdetail_ll_catalog"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_tv_longintro">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/catalog" />
-
-        <TextView
-            android:id="@+id/bookdetail_tv_lastcapture"
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="right"
-            android:text="最新章节" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/bookdetail_ll_maybe_interest"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_catalog">
-
-        <View
-            android:layout_width="@dimen/common_divider_vertical_width"
             android:layout_height="match_parent"
-            android:layout_alignBottom="@id/bookcity_rv_item_head_text"
-            android:layout_alignTop="@id/bookcity_rv_item_head_text"
-            android:background="@color/colorPrimary" />
+            android:scrollbars="none">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:text="@string/books_maybe_interest" />
-    </LinearLayout>
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/bookdetail_cl_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin"
+                android:paddingTop="@dimen/activity_vertical_margin">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/bookdetail_rv_interested_books"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_maybe_interest" />
-</android.support.constraint.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/bookdetail_iv_cover"
+                    style="@style/ImageViewBookCover"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin" />
+
+                <TextView
+                    android:id="@+id/bookdetail_tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:text="title"
+                    app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover" />
+
+                <LinearLayout
+                    android:id="@+id/bookdetail_ll_author"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:orientation="horizontal"
+                    app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_tv_title">
+
+                    <TextView
+                        android:id="@+id/bookdetail_tv_author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="author" />
+
+                    <View
+                        android:layout_width="@dimen/common_divider_vertical_width"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:background="@color/colorPrimary" />
+
+                    <TextView
+                        android:id="@+id/bookdetail_tv_category"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="category" />
+
+                    <View
+                        android:layout_width="@dimen/common_divider_vertical_width"
+                        android:layout_height="match_parent"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:background="@color/colorPrimary" />
+
+                    <TextView
+                        android:id="@+id/bookdetail_tv_wordcount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="wordcount" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/bookdetail_tv_lasttime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:text="lasttime"
+                    app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_author" />
+
+                <TextView
+                    android:id="@+id/bookdetail_tv_lastcapture"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:text="lastchapter"
+                    app:layout_constraintLeft_toRightOf="@id/bookdetail_iv_cover"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_tv_lasttime" />
+
+                <LinearLayout
+                    android:id="@+id/bookdetail_ll_add_bookshelf"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_iv_cover">
+
+                    <Button
+                        android:id="@+id/bookdetail_bt_add_bookshelf"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/add_bookshelf" />
+
+                    <Button
+                        android:id="@+id/bookdetail_bt_start_read"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_weight="1"
+                        android:text="@string/start_read" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/bookdetail_tv_longintro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:text="longIntro"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_add_bookshelf" />
+
+                <LinearLayout
+                    android:id="@+id/bookdetail_ll_catalog"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:orientation="horizontal"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_tv_longintro">
+
+                    <View
+                        android:layout_width="@dimen/common_divider_vertical_width"
+                        android:layout_height="match_parent"
+                        android:layout_alignBottom="@id/bookcity_rv_item_head_text"
+                        android:layout_alignTop="@id/bookcity_rv_item_head_text"
+                        android:background="@color/colorPrimary" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:layout_weight="1"
+                        android:text="@string/catalog" />
+
+                    <TextView
+                        android:id="@+id/bookdetail_tv_reverse_order"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/reverse_order" />
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/bookdetail_rv_interested_books"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_catalog" />
+
+                <include
+                    layout="@layout/view_empty"
+                    android:visibility="gone" />
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
