--- a/app/src/main/res/layout/activity_bookdetail_recommend_books_item.xml
+++ b/app/src/main/res/layout/activity_bookdetail_recommend_books_item.xml
@@ -7,11 +7,9 @@
 
     <ImageView
         android:id="@+id/bookdetail_rv_item_cover"
-        android:layout_width="@dimen/book_cover_width"
-        android:layout_height="@dimen/book_cover_height"
+        style="@style/ImageViewBookCover"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:src="@mipmap/ic_default_portrait" />
+        android:layout_marginRight="@dimen/activity_horizontal_margin" />
 
     <TextView
         android:id="@+id/bookdetail_rv_item_title"
