--- a/app/src/main/res/layout/fragment_bookcity_recyclerview_header.xml
+++ b/app/src/main/res/layout/fragment_bookcity_recyclerview_header.xml
@@ -1,13 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:overScrollMode="never"
-    android:scrollbars="none">
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/bookcity_rv_header_parent"
+    <RelativeLayout
+        android:id="@+id/bookcity_rv_item_head"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/bookcity_recycler_item_head_height"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical">
+
+        <View
+            android:id="@+id/bookcity_recyclerview_item_tag"
+            android:layout_width="@dimen/common_divider_vertical_width"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/bookcity_rv_item_head_text"
+            android:layout_alignTop="@id/bookcity_rv_item_head_text"
+            android:background="@color/colorPrimary" />
+
+        <TextView
+            android:id="@+id/bookcity_rv_item_head_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_toRightOf="@id/bookcity_recyclerview_item_tag"
+            android:text="热门小说" />
+    </RelativeLayout>
+
+    <HorizontalScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"></LinearLayout>
-</HorizontalScrollView>
+        android:overScrollMode="never"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:id="@+id/bookcity_rv_header_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        </LinearLayout>
+    </HorizontalScrollView>
+</LinearLayout>
