--- a/app/src/main/res/layout/fragment_bookcity_recyclerview_header_item.xml
+++ b/app/src/main/res/layout/fragment_bookcity_recyclerview_header_item.xml
@@ -2,16 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/activity_horizontal_margin"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/bookcity_rv_header_item_cover"
-        android:layout_width="@dimen/book_cover_width"
-        android:layout_height="@dimen/book_cover_height"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:src="@mipmap/ic_default_portrait" />
+        style="@style/ImageViewBookCover" />
 
     <TextView
         android:id="@+id/bookcity_rv_header_item_title"
@@ -28,6 +25,5 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="10dp"
         android:text="author" />
 </LinearLayout>
