--- a/app/src/main/res/layout/fragment_bookcity_recyclerview_item.xml
+++ b/app/src/main/res/layout/fragment_bookcity_recyclerview_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/bookcity_rv_item_head"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bookcity_recycler_item_head_height"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical">
 
         <View
@@ -30,9 +31,9 @@
 
     <ImageView
         android:id="@+id/bookcity_rv_item_cover"
-        android:layout_width="@dimen/book_cover_width"
-        android:layout_height="@dimen/book_cover_height"
-        android:src="@mipmap/ic_default_portrait"
+        style="@style/ImageViewBookCover"
+
+        app:layout_constraintLeft_toLeftOf="@id/bookcity_rv_item_head"
         app:layout_constraintTop_toBottomOf="@id/bookcity_rv_item_head" />
 
     <TextView
@@ -42,17 +43,21 @@
         android:layout_marginLeft="10dp"
         android:text="title"
         app:layout_constraintLeft_toRightOf="@id/bookcity_rv_item_cover"
-        app:layout_constraintTop_toBottomOf="@id/bookcity_rv_item_head" />
+        app:layout_constraintTop_toBottomOf="@id/bookcity_rv_item_head"
+        app:layout_constraintTop_toTopOf="@id/bookcity_rv_item_cover" />
 
     <TextView
         android:id="@+id/bookcity_rv_item_desc"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:layout_marginTop="10dp"
-        android:text="desc"
-        app:layout_constraintBottom_toTopOf="@id/bookcity_rv_item_author"
+        android:maxLines="5"
+        android:ellipsize="end"
+        android:text="蒸汽与机械的浪潮中，谁能触及非凡？历史和黑暗的迷雾里，又是谁在耳语？我从诡秘中醒来，睁眼看见这个世界：枪械，大炮，巨舰，飞空艇，差分机；魔药，占卜，诅咒，倒吊人，封印物……光明依旧照耀，神秘从未远离，这是一段“愚者”的传说。"
         app:layout_constraintLeft_toRightOf="@id/bookcity_rv_item_cover"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bookcity_rv_item_title" />
 
     <TextView
@@ -60,9 +65,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:text="author"
         app:layout_constraintBottom_toBottomOf="@id/bookcity_rv_item_cover"
         app:layout_constraintLeft_toRightOf="@id/bookcity_rv_item_cover"
-        app:layout_constraintTop_toBottomOf="@id/bookcity_rv_item_desc"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@id/bookcity_rv_item_desc" />
 </android.support.constraint.ConstraintLayout>
