--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!--书籍的显示封面-->
+    <style name="ImageViewBookCover">
+        <item name="android:layout_width">@dimen/book_cover_width</item>
+        <item name="android:layout_height">@dimen/book_cover_height</item>
+        <item name="android:src">@drawable/ic_book_loading</item>
+        <item name="android:scaleType">fitXY</item>
+    </style>
+
 </resources>
