--- a/ireader/src/main/res/layout/view_loading.xml
+++ b/ireader/src/main/res/layout/view_loading.xml
@@ -5,6 +5,7 @@
 
     <ProgressBar
         android:id="@+id/loadding_pb"
+        style="@style/Loading.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true" />
