--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -14,15 +14,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.widget.NestedScrollView
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none">
+            android:layout_height="match_parent">
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/bookdetail_cl_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
                 android:paddingRight="@dimen/activity_horizontal_margin"
@@ -165,18 +164,18 @@
                         android:layout_height="wrap_content"
                         android:text="@string/reverse_order" />
                 </LinearLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/bookdetail_rv_interested_books"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_catalog" />
-
-                <include
-                    layout="@layout/view_empty"
-                    android:visibility="gone" />
             </android.support.constraint.ConstraintLayout>
-        </android.support.v4.widget.NestedScrollView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/bookdetail_rv_interested_books"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_behavior="com.book.novel.widget.RecyclerViewBehavior"
+                app:layout_constraintTop_toBottomOf="@id/bookdetail_ll_catalog" />
+
+            <include
+                layout="@layout/view_empty"
+                android:visibility="gone" />
+        </android.support.design.widget.CoordinatorLayout>
     </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
