--- a/app/src/main/res/layout/fragment_bookcity_recyclerview_header.xml
+++ b/app/src/main/res/layout/fragment_bookcity_recyclerview_header.xml
@@ -38,7 +38,8 @@
             android:id="@+id/bookcity_rv_header_parent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        </LinearLayout>
+            android:layout_marginLeft="@dimen/bookcity_header_item_margin"
+            android:layout_marginRight="@dimen/bookcity_header_item_margin"
+            android:orientation="horizontal"></LinearLayout>
     </HorizontalScrollView>
 </LinearLayout>
