--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="bookcity_header_item_margin">8dp</dimen>
+    <dimen name="bookdetail_info_text_margin_top">9dp</dimen>
+    <dimen name="bookdetail_info_text_size">14sp</dimen>
     <dimen name="book_cover_width">105dp</dimen>
     <dimen name="book_cover_height">140dp</dimen>
     <dimen name="bookcity_recycler_item_head_height">50dp</dimen>
