--- a/app/src/main/res/layout/activity_bookdetail_chapters_item.xml
+++ b/app/src/main/res/layout/activity_bookdetail_chapters_item.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/book_item_selector">
+    android:background="?attr/selectableItemBackground">
 
     <TextView
         android:id="@+id/bookdetail_chapters_Item_tv_name"
