--- a/app/src/main/res/layout/fragment_bookcity_recyclerview_item.xml
+++ b/app/src/main/res/layout/fragment_bookcity_recyclerview_item.xml
@@ -32,7 +32,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/book_item_selector"
+        android:background="?attr/selectableItemBackground"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         app:layout_constraintLeft_toLeftOf="parent"
