--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="book_cover_height">140dp</dimen>
     <dimen name="bookcity_recycler_item_head_height">50dp</dimen>
     <dimen name="common_divider_vertical_width">2dp</dimen>
+    <dimen name="book_item_padding">10dp</dimen>
 </resources>
