--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -19,6 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="top"
+                app:tabIndicatorColor="@color/colorPrimary"
                 app:tabMode="scrollable" />
 
         </android.support.v4.view.ViewPager>
