--- a/app/src/main/res/layout/fragment_bookshelf_recyclerview_item.xml
+++ b/app/src/main/res/layout/fragment_bookshelf_recyclerview_item.xml
@@ -61,16 +61,30 @@
                 android:textColor="@color/nb.text.common_h2"
                 android:textSize="14sp" />
 
-            <TextView
-                android:id="@+id/bookshelf_tv_lastchapter"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/bookshelf_tv_category"
-                android:ellipsize="end"
-                android:singleLine="true"
-                android:text="@string/nb.search.book.last_chapter"
-                android:textColor="@color/nb.text.common_h2"
-                android:textSize="14sp" />
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/bookshelf_tv_lastchapter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="@string/nb.search.book.last_chapter"
+                    android:textColor="@color/nb.text.common_h2"
+                    android:textSize="14sp" />
+
+                <View
+                    android:id="@+id/bookshelf_v_red_tip"
+                    android:layout_width="6dp"
+                    android:layout_height="6dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/book_update_tip_shape"
+                    android:visibility="gone" />
+            </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
