--- a/app/src/main/res/layout/fragment_bookcity_recyclerview_header.xml
+++ b/app/src/main/res/layout/fragment_bookcity_recyclerview_header.xml
@@ -5,27 +5,12 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-7332030505319718/1835410792"
-        app:layout_constraintDimensionRatio="H,16:6"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <include layout="@layout/include_banner" />
-
     <RelativeLayout
         android:id="@+id/bookcity_rv_item_head"
         android:layout_width="match_parent"
         android:layout_height="@dimen/bookcity_recycler_item_head_height"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:gravity="center_vertical"
-        app:layout_constraintTop_toBottomOf="@id/adView">
+        android:gravity="center_vertical">
 
         <View
             android:id="@+id/bookcity_recyclerview_item_tag"
